--- a/MauiApp/AppShell.xaml
+++ b/MauiApp/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="MauiApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MauiApp"
+    xmlns:local="clr-namespace:MauiApp1"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
